# irc

./: .gitignore  CMakeLists.txt  README.md
include/: irc_client.h  irc_server.h
logs/: user_account_history.txt
src/: irc_client.c  irc_server.c
src/client/: irc_client.c  irc_client_gui.c
